[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "minimum packages required for normal use"
authors = ["Hinny Tsang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry>=0.12"]